--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -30,15 +30,15 @@
             <a (click)="sendSelectedPage('resolved-chats')" routerlinkactive="router-link-exact-active" [ngClass]="{'menu-active':activeSection ==='resolved-chats'}" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                 <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
-              </svg>Resolved Chats 
+              </svg>Chat History
               <!-- <p-badge [value]="'2'"></p-badge> -->
             </a>
-            <a  (click)="sendSelectedPage('unresolved-chats')" routerlinkactive="router-link-exact-active" [ngClass]="{'menu-active':activeSection ==='unresolved-chats'}" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+            <!-- <a  (click)="sendSelectedPage('unresolved-chats')" routerlinkactive="router-link-exact-active" [ngClass]="{'menu-active':activeSection ==='unresolved-chats'}" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                 <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
               </svg>Unresolved Chats 
-              <!-- <p-badge [value]="'2'"></p-badge> -->
-            </a>
+               <p-badge [value]="'2'"></p-badge>
+            </a> -->
         </div>
     </div>
 
