Change api endpoint and fix attachment

--- a/src/app/agent/layout/chat-box/chat-box.component.css
+++ b/src/app/agent/layout/chat-box/chat-box.component.css
@@ -15,6 +15,14 @@
   bottom: 3px;
 }
 
+.chat-time-agent-attachment{
+  margin-top: 20px;
+}
+
+.from-them-attachment{
+  padding-bottom: 20px !important;
+}
+
 #customer-name{
     font-size: 24px;
     font-weight: bold;
