--- a/src/app/company/payments/payment/payment.component.html
+++ b/src/app/company/payments/payment/payment.component.html
@@ -1,7 +1,33 @@
 <div class="row">
-  <div class="col-md-11">
+  <div class="col-md-12">
+
     <div class="card" id="add-agent-card">
       <div class="right">
+        <div class="card">
+          <div class="row">
+
+            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
+              <span>Started</span>
+              <h4>$42</h4>
+              <span>12000 chats/year</span>
+            </div>
+            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
+              <span>Started</span>
+              <h4>$42</h4>
+              <span>12000 chats/year</span>
+            </div>
+            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
+              <span>Started</span>
+              <h4>$42</h4>
+              <span>12000 chats/year</span>
+            </div>
+            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
+              <span>Started</span>
+              <h4>$42</h4>
+              <span>12000 chats/year</span>
+            </div>
+          </div>
+        </div>
         <div class="card" id="container-card-right">
           <form>
             <div class="card-body">
@@ -11,57 +37,36 @@
               </div> -->
               <!-- Form -->
             </div>
-
+            <h2></h2>
             <!-- Form -->
-            <div class="">
 
-              <form novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
-                <div class="form-group">
-                  <input type="text" formControlName="name" placeholder="Jane Doe">
+            <!-- <div class="" *ngIf="nonIndianPayment"> -->
+            <form novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
+              <div class="form-group">
+                <input type="text" formControlName="name" placeholder="Jane Doe">
 
-                </div>
-                <div class="form-group">
-
-                  <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
-                </div>
-                <button type="submit">
-                  Submit
-                </button>
-              </form>
-              <!--               
-              <div class="col-xs-12 col-md-6 form-group">
-                <label for="exampleFormControlInput1">Email address*</label>
-                <input type="email" class="form-control" placeholder="name@example.com">
               </div>
+              <div class="form-group">
+                <input type="text" formControlName="name" placeholder="1000">
 
-              
-              <div class="col-xs-12 col-md-6 form-group">
-                <label for="exampleFormControlInput1">Password*</label>
-                <input type="password" class="form-control" placeholder="Password">
               </div>
+              <div class="form-group">
 
-              
-              <div class="col-xs-12 col-md-6 form-group">
-                <label for="exampleFormControlInput1">Confirm Password*</label>
-                <input type="password" class="form-control" placeholder="Confirm Password">
+                <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
               </div>
+              <div class="form-group">
+                <input type="checkbox" formControlName="recurring" /> Recurring payment
 
-              
-              <div class="col-xs-12 col-md-6 form-group">
-                <label for="exampleFormControlInput1">Phone Number*</label>
-                <input type="number" class="form-control" placeholder="Phone number">
               </div>
+              <button type="submit">
+                Submit
+              </button>
+            </form>
+            <!-- </div>
+            <div class="" *ngIf="indiaPayment">
+              <h2>For India</h2>
+            </div> -->
 
-              
-              <div class="col-xs-12 col-md-6 form-group">
-                <label for="exampleFormControlInput1">Password Match Confirmation</label>
-                <input readonly type="text" class="form-control" id="statusInput" placeholder="">
-              </div> -->
-
-
-              <!-- Phone -->
-
-            </div>
           </form>
           <!-- Form Ends -->
 
