--- a/src/app/company/payments/payment/payment.component.html
+++ b/src/app/company/payments/payment/payment.component.html
@@ -1,45 +1,37 @@
-<div class="row">
-  <div class="col-md-12">
 
-    <div class="card" id="add-agent-card">
+  <div class="wrappwer">
+
+    <div class="" id="add-agent-card">
       <div class="right">
-        <div class="card">
-          <div class="row">
-
-            <p>
-              Your current plan: starter, end in 6 days.<br />
+        <div class="card" id="cr-1">
+            <p class="text-center pt">
+              Your current plan: <b>Starter</b>, end in <b>6 days</b>.<br />
               Subscribe now to keep on using chatbot without interruption.
             </p>
-          </div>
         </div>
-        <div class="card">
-          <div class="row">
-
-            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
-
-              <span>Started</span>
-              <h4>$42</h4>
-              <span>12000 chats/year</span>
-
-            </div>
-            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
+        <div class="d-flex pr-flexer">
+            <div class="">
               <span>Started</span>
               <h4>$42</h4>
               <span>12000 chats/year</span>
             </div>
-            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
+            <div class="">
               <span>Started</span>
               <h4>$42</h4>
               <span>12000 chats/year</span>
             </div>
-            <div class="col-md-3" style="border: 1px solid black; text-align: center;">
+            <div class="">
               <span>Started</span>
               <h4>$42</h4>
               <span>12000 chats/year</span>
             </div>
-          </div>
+            <div class="">
+              <span>Started</span>
+              <h4>$42</h4>
+              <span>12000 chats/year</span>
+            </div>
         </div>
-        <div class="card" id="container-card-right">
+        <div class="card" id="container-card-right" id="cr-2">
 
           <div class="card-body">
 
@@ -80,4 +72,3 @@
       </div>
     </div>
   </div>
-</div>
