--- a/src/app/company/payments/payment/payment.component.css
+++ b/src/app/company/payments/payment/payment.component.css
@@ -21,7 +21,9 @@ p.pt{
 	border: 1px solid rgba(0, 0, 0, 0.29);
 	background: #fff;
 	text-align: center;
-	width: 100%;
+	flex: 1 0;
+	height: 220px;
+	transition: 300ms ease-in;
 }
 #cr-1{
 	border-bottom: none;
@@ -32,4 +34,62 @@ p.pt{
 	border-top: none;
 	border-top-right-radius: 0px;
 	border-top-left-radius: 0px;
+}
+.c-flex{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.pr-flexer div.plan-1{
+    border-right:1px solid transparent;
+}
+.pr-flexer div:hover{
+	border:1.5px solid #a733bb;
+	transition: 300ms ease-in;
+}
+.info-1{
+	font-weight: bold;
+	text-transform: uppercase;
+}
+.prce{
+	color: #000;
+	font-weight: bold;
+	font-size: 35px;
+	margin: 20px 0px;
+}
+.prce sup{
+	color: #535353;
+font-size: 19px;
+font-weight: normal;
+}
+
+form{
+padding: 0px 0px;
+background-position: left center;
+background-attachment: static;
+background-repeat: repeat;
+border: none;
+border-radius: 6px;
+}
+.form-cstm{
+	padding: 15px;
+border: 1px solid rgba(0, 0, 0, 0.29);
+margin: 15px;
+width: 50%;
+margin: 0 auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+margin-top: 18px;
+margin-bottom: 18px;
+}
+.form-cstm .form-group input.inpt{
+	width: 100%;
+	padding-left: 5px;
+}
+.form-cstm  input.inpt:focus,
+.form-cstm  input.inpt:focus-within{
+	box-shadow: none!important;
+	border-color:#a733bb;
+	outline: 0;
 }
