--- a/src/app/company/payments/payment/payment.component.html
+++ b/src/app/company/payments/payment/payment.component.html
@@ -33,8 +33,76 @@
         </div>
         <div class="card" id="container-card-right" id="cr-2">
           <!-- <div class="" *ngIf="nonIndianPayment"> -->
-          <div class="form-cstm">
-            <form novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
+          <div class="row">
+            <div class="col-lg-5">
+              <div class="points">
+               
+
+
+                <!-- <mat-icon>pie_chart</mat-icon> -->
+                <b>WHAT YOU HAVE:</b>
+                <ul>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                  5000 free chats/mo</li>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                    5 active chatbots</li>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                    All integrations</li>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                    Data security</li>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                    Unlimited training history</li>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                    Advanced reporting</li>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                    Team collaboration</li>
+                  <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                    Button actions </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-7">
+              <table class="table">
+                <tr>
+                  <td>Billing Cycle</td>
+                  <td class="text-right">
+                    <div class="custom-control custom-radio custom-control-inline">
+                          <input type="radio" class="custom-control-input" id="customRadio1" name="example1">
+                          <label class="custom-control-label" for="customRadio1">Monthly</label>
+                      </div>
+                      <div class="custom-control custom-radio custom-control-inline">
+                          <input type="radio" class="custom-control-input" id="customRadio2" name="example1">
+                          <label class="custom-control-label" for="customRadio2">Annual (Save 15%)</label>
+                      </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    Total Price
+                  </td>
+                  <td class="text-right">
+                    <h3 class="clr">$1512</h3>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="no-brdr">
+                     <button type="submit" class="button">
+                      Go to checkout
+                    </button>
+                  </td>
+
+                </tr>
+              </table>
+            </div>
+           <!--  <form novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
               <div class="form-group">
                 <input type="text" formControlName="name" placeholder="Jane Doe" class="inpt">
 
@@ -54,7 +122,7 @@
               <button type="submit" class="button">
                 Submit
               </button>
-            </form>
+            </form> -->
           </div>
           <!-- </div>
                    
