--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -98,7 +98,7 @@
         <p-fileUpload #profilePicUpload [multiple]="false" [showUploadButton]="false" [showCancelButton]="false" name="myfile[]" [customUpload]="true" (onClear)="onClearFile()" (onRemove)="onClearFile()" (onSelect)="setFile($event)"></p-fileUpload>
         <br/>
 
-        <button [disabled]="!hasFileSelected" type="button" (click)="updateAgentData()" pButton label="Submit"></button>
+        <button type="button" (click)="updateAgentData()" pButton label="Submit"></button>
     </form>
 
 </p-dialog>
