--- a/src/app/agent/layout/sidebar/sidebar.component.css
+++ b/src/app/agent/layout/sidebar/sidebar.component.css
@@ -1,3 +1,7 @@
+::ng-deep .p-card{
+        margin-bottom: 10px;
+}
+
 .agent-sidebar{
     width: 250px;
     height: 100%;
@@ -101,4 +105,39 @@
     align-items: flex-end;
     justify-content: center;
     width: 230px;
+}
+
+/* Notification CSS */
+
+.notif-container{
+    overflow-y: scroll;
+    min-height: 400px;
+    max-height: 500px;
+    min-width: 300px;
+    padding: 20px;
+    background-color: rgb(245, 245, 245);
+    border-radius: 15px;
+}
+::-webkit-scrollbar {
+    width: 5px;  /* Remove scrollbar space */
+    background: white;  /* Optional: just make scrollbar invisible */
+}
+
+  
+::-webkit-scrollbar-thumb {
+    background: gray;
+}
+.notif-title{
+    display: inline-block;
+    color: purple;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.notif-actions{
+    color: purple;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
 }
