add notification number

--- a/src/app/agent/layout/sidebar/sidebar.component.css
+++ b/src/app/agent/layout/sidebar/sidebar.component.css
@@ -25,6 +25,12 @@
     outline: none;
     border: none;
     color: black;
+    overflow: initial;
+}
+
+.notification-button:hover{
+    background-color: transparent !important;
+    color: purple !important;
 }
 
 .edit-header-button{
