--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         
         <h3 class="p-col-9 p-md-9 header-info-container">
             <p-avatar *ngIf="agentDetails === null" label="PT" shape="circle" styleClass="avatar-label"></p-avatar>
-            <p-avatar *ngIf="agentDetails !== null" [image]="baseUrl + agentDetails?.profile_pic?.substring(1)" shape="circle"></p-avatar>
+            <p-avatar *ngIf="agentDetails !== null" [image]="agentDetails?.profile_pic" shape="circle"></p-avatar>
             &nbsp;{{agentDetails?.first_name}} {{agentDetails?.last_name}} 
             &nbsp; <button class="notification-button"  pBadge [value]="notificationsList.length.toString()" (click)="op.toggle($event)" pButton icon="pi pi-bell"></button>
             <br/>
@@ -110,21 +110,6 @@
         <span class="notif-title">Notifications</span>
         <div class="notif-container">
             <div class="notif-cards">
-                <p-card title="notitication?.notification_head">
-                    Hello notitication <i pTooltip="Mark as Read" (click)="markAsRead(1)" class="pi pi-check"></i>
-                </p-card>
-                <p-card title="notitication?.notification_head">
-                    Hello notitication <i pTooltip="Mark as Read" (click)="markAsRead(1)" class="pi pi-check"></i>
-                </p-card>
-                <p-card title="notitication?.notification_head">
-                    Hello notitication <i pTooltip="Mark as Read" (click)="markAsRead(1)" class="pi pi-check"></i>
-                </p-card>
-                <p-card title="notitication?.notification_head">
-                    Hello notitication <i pTooltip="Mark as Read" (click)="markAsRead(1)" class="pi pi-check"></i>
-                </p-card>
-                <p-card title="notitication?.notification_head">
-                    Hello notitication <i pTooltip="Mark as Read" (click)="markAsRead(1)" class="pi pi-check"></i>
-                </p-card>
                 <p-card [title]="notitication?.notification_head" *ngFor="let notitication of notificationsList">
                     {{notitication?.notification_message}} <i (click)="markAsRead(notitication?.id)" class="pi pi-check"></i>
                     <div (click)="markAsRead(notitication?.id)" class="notif-actions">
