--- a/src/app/agent/layout/sidebar/sidebar.component.css
+++ b/src/app/agent/layout/sidebar/sidebar.component.css
@@ -120,6 +120,7 @@
     min-height: 400px;
     max-height: 500px;
     min-width: 300px;
+    max-width: 400px;
     padding: 20px;
     background-color: rgb(245, 245, 245);
     border-radius: 15px;
